--- a/latihan.html
+++ b/latihan.html
@@ -1,10 +1,10 @@
  <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Latihan Difoss</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Ini heading pertama</h1>
+<p>Ini paragraf pertama</p>
 
 </body>
 </html> 
