--- a/latihan.html
+++ b/latihan.html
@@ -3,8 +3,14 @@
 <title>Latihan Difoss</title>
 <body>
 
-<h1>Ini heading pertama</h1>
-<p>Ini paragraf pertama</p>
+<h1>Foss studio minggu pertama</h1>
+<p>materi: API</p>
+ 
+<h2>Foss studio minggu kedua</h2>
+<p>materi: Video dan Worrdpress</p>
+
+<h3>Foss studio minggu 3</h3>
+<p>materi: Git, Github, Gitlab<p>
 
 </body>
 </html> 
